--- a/package.json
+++ b/package.json
@@ -55,9 +55,11 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
-    "jest": "^28.1.0",
+    "jest": "^28.1.2",
+    "jest-puppeteer": "^6.1.1",
     "mini-css-extract-plugin": "^2.6.0",
     "nodemon": "^2.0.19",
+    "puppeteer": "^15.3.2",
     "react-select": "^5.3.2",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
